fix image overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,6 @@ body {
   line-height: 1.2;
   color: #000000;
   background-color:#FFFFFF;
-  overflow-x: hidden;
 }
 
 img{
@@ -141,6 +140,7 @@ img{
   padding-bottom: 50px;
   padding-right: 30px;
   padding-left: 25px;
+  overflow-x: hidden;
 }
 
 .about-img {
@@ -243,7 +243,26 @@ img{
 }
 
 @media only screen and (max-width: 1100px) {
+  .about-img {
+    max-width: 400px;
+    height: 300px;
+    object-fit: cover;
+  }
+}
 
+@media only screen and (max-width: 850px) {
+  .about-section {
+    flex-direction: column;
+  }
+  .about-content{
+    max-width: 100%;
+  }
+
+  .about-img {
+    order: -1;
+    max-width: 850px;
+    height: 400px;
+  }
 }
 
 @media only screen and (max-width: 750px) {
@@ -253,6 +272,13 @@ img{
 
   .stat-desc {
     font-size: 16px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .about-img {
+    max-width: 100%;
+    height: 300px;
   }
 }
 
@@ -267,36 +293,6 @@ img{
 
   .stat-desc {
     font-size: 14px;
-  }
-}
-
-@media only screen and (max-width: 1100px) {
-  .about-img {
-    width: 400;
-    height: 300px;
-    object-fit: cover;
-  }
-}
-
-@media only screen and (max-width: 850px) {
-  .about-section {
-    flex-direction: column;
-  }
-  .about-content{
-    max-width: 850px;
-  }
-
-  .about-img {
-    order: -1;
-    max-width: 850px;
-    height: 400px;
-  }
-}
-
-@media only screen and (max-width: 700px) {
-  .about-img {
-    max-width: 700px;
-    height: 300px;
   }
 }
 
